@@ -6,6 +6,7 @@ Version 1.7.3+svn:
    * Better support for conflicting terrain letters across add-ons, now
      in the event of a conflict the terrain will appear in all terrain
      groups as opposed to appearing in one of them multiple times.
+   * Added remembering of the show terrain codes and coordinates options
  * Graphics:
    * New portraits for Ancient Wose, Ruffian, Master-at-arms.
    * New melee animation for Thunderguard, Dragonguard.
